<resources>
    <string name="app_name">School Hub</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="hint_nis_edittext">Student Number</string>
    <string name="hint_password_edittext">Password</string>
    <string name="hint_email_edittext">Email</string>
    <string name="hint_fullname_edittext">Fullname</string>
    <string name="hint_school_name_edittext">School Name</string>
    <string name="hint_title_edittext">Title</string>
    <string name="hint_question_edittext">Question</string>
    <string name="hint_category_spinner">Choose Subjects</string>

    <string name="message_loading">Loading...</string>

    <string name="label_forgot_password">Forgot Password?</string>
    <string name="label_auth_textview">Collect all your friends\' photos and videos in one single online album</string>
    <string name="label_signup_button">SIGN UP</string>
    <string name="label_show_button">show</string>
    <string name="label_login_button">LOG IN</string>
    <string name="label_hide_button">hide</string>
    <string name="label_action_new_room">New Room</string>
    <string name="label_actionbar_title_create_discussion_room">Create Discussion Room</string>
    <string name="label_submit_button">SUBMIT</string>

    <string name="txt_yo_yo">Yo Yo</string>
    <string name="label_empty_comment">No Answer Yet.</string>
    <string name="label_your_answer_edittext">Your answer</string>
    <string name="label_empty_schedule">No schedule yet</string>
    <string name="label_title_edittext">Title</string>

    <string name="label_monday_rad_button">MONDAY</string>
    <string name="label_tuesday_rad_button">TUESDAY</string>
    <string name="label_wednesday_rad_button">WEDNESDAY</string>
    <string name="label_thrusday_rad_button">THURSDAY</string>
    <string name="label_friday_rad_button">FRIDAY</string>
    <string name="label_every">Every</string>
    <string name="label_at_time">At time</string>
    <string name="label_default_time">00</string>
    <string name="label_separator_time">:</string>
    <string name="label_empty_question">No Question Yet</string>
    <string name="title_schedule_screen">Schedule</string>
    <string name="title_discussion_screen">Discussion Room</string>

    <string-array name="countries_array">
        <item>Afghanistan</item>
        <item>Albania</item>
        <item>Algeria</item>
        <item>American Samoa</item>
        <item>Andorra</item>
        <item>Angola</item>
        <item>Anguilla</item>
        <item>Antarctica</item>
    </string-array>

    <string-array name="category_array">
        <item>Matematika</item>
        <item>Fisika</item>
        <item>Sejarah Indonesia</item>
        <item>Biologi</item>
        <item>Bahasa Indonesia</item>
        <item>Kimia</item>
        <item>Bahasa Inggris</item>
        <item>Bahasa dan Sastra Inggris</item>
        <item>Pendidikan Agama</item>
        <item>Ekonomi</item>
        <item>Geografi</item>
    </string-array>
</resources>
