<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UnusedAttribute">

        <android.support.v7.widget.Toolbar
            android:id="@+id/action_bar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:elevation="4dp"
            android:minHeight="?actionBarSize"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:padding="16dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/answer_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/answer"
                    style="@style/Base.SchoolHub.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/edittext_background"
                    android:ems="10"
                    android:hint="@string/label_title_edittext"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.widget.Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/label_every" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/mon_rad_button"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:background="@drawable/rad_button_background"
                    android:button="@null"
                    android:checked="true"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/label_monday_rad_button"
                    android:textSize="12sp" />

                <RadioButton
                    android:id="@+id/tue_rad_button"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:background="@drawable/rad_button_background"
                    android:button="@null"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/label_tuesday_rad_button"
                    android:textSize="12sp" />

                <RadioButton
                    android:id="@+id/wed_rad_button"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:background="@drawable/rad_button_background"
                    android:button="@null"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/label_wednesday_rad_button"
                    android:textSize="12sp" />

                <RadioButton
                    android:id="@+id/thu_rad_button"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:background="@drawable/rad_button_background"
                    android:button="@null"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/label_thrusday_rad_button"
                    android:textSize="12sp" />

                <RadioButton
                    android:id="@+id/fri_rad_button"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:background="@drawable/rad_button_background"
                    android:button="@null"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/label_friday_rad_button"
                    android:textSize="12sp" />

            </RadioGroup>

            <android.widget.Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/label_at_time" />

            <id.hub.school.schoolhub.view.widget.TimePickerView
                android:id="@+id/time_picker_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <android.widget.Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <Button
                android:id="@+id/button_submit"
                style="@style/Base.SchoolHub.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_submit"
                android:text="@string/label_submit_button"
                android:textColor="@android:color/white" />
        </LinearLayout>


    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>