<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_primary_light"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="24dp"
    android:paddingRight="24dp">

    <EditText
        android:id="@+id/nis"
        style="@style/Base.SchoolHub.EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_background"
        android:hint="@string/hint_nis_edittext"
        android:inputType="number"
        android:singleLine="true" />

    <android.support.v4.widget.Space
        android:layout_width="0dp"
        android:layout_height="20dp" />

    <EditText
        android:id="@+id/password"
        style="@style/Base.SchoolHub.EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_background"
        android:hint="@string/hint_password_edittext"
        android:inputType="textPassword"
        android:singleLine="true" />

    <android.support.v4.widget.Space
        android:layout_width="0dp"
        android:layout_height="24dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/login_button"
            style="@style/Base.SchoolHub.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_submit"
            android:text="@string/label_login_button"
            android:textColor="@android:color/white" />

    </LinearLayout>

</LinearLayout>