<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:padding="16dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/auto_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/autocompleteSchoolName"
                    style="@style/Base.SchoolHub.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_school_name_edittext"
                    android:inputType="textCapWords"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/nis_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/nis"
                    style="@style/Base.SchoolHub.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_nis_edittext"
                    android:inputType="number"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/fullname_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/fullname"
                    style="@style/Base.SchoolHub.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_fullname_edittext"
                    android:inputType="textCapWords"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/password_text_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/password"
                        style="@style/Base.SchoolHub.EditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_password_edittext"
                        android:inputType="textPassword"
                        android:paddingRight="80dp"
                        android:singleLine="true"
                        tools:ignore="RtlHardcoded,RtlSymmetry" />

                </android.support.design.widget.TextInputLayout>

                <CheckBox
                    android:id="@+id/show_password"
                    android:layout_width="80dp"
                    android:layout_height="48dp"
                    android:layout_gravity="right"
                    android:layout_marginTop="12dp"
                    android:background="?attr/selectableItemBackground"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/label_show_button"
                    tools:ignore="RtlHardcoded" />
            </FrameLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom">

        <Button
            android:id="@+id/signup_button"
            style="@style/Base.SchoolHub.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rect_button_signup"
            android:gravity="center"
            android:text="@string/label_signup_button"
            android:textColor="@android:color/white" />
    </FrameLayout>

</FrameLayout>